Fit everything to page size and added index
Signed-off-by: Adriaensen <ra2617@ic.ac.uk>

--- a/notebooks/geosciences/Image_Operations.ipynb
+++ b/notebooks/geosciences/Image_Operations.ipynb
@@ -5,7 +5,7 @@
         "collapsed": true
       },
       "cell_type": "markdown",
-      "source": "# Remote Sensing\n\nA digital image is a 2D array of numbers in lines and columns or a raster dataset. It can also have a third dimension, in the form of other layers. Each cell of a digital image is called a pixel and the number representing the brightness of the pixel is called a **digital number (DN).** It can be composed of any number of layers/bands.\n<img src=\"Data_Image_Operations/Image_Layers.png\" style=\"width:400px;\"/>\n\nNot all bands are within the visible spectrum, however we can visualise them by assigning them to a colour gun in the visible spectrum. Following **tristimulus colour theory**, human colour perception is performed by three types of cones matching three primary colour: **R**ed, **G**reen and **B**lue (RGB). the combination of these three colours:\n$$ C=rR+gG+bB $$\nAllows any colour to be represented to us within the visible spectrum.\n\nIntroducing some common terminoloy:\n\n** True colour composite ** -> display of 3 image bands in red, green and blue spectral ranges matching RGB. \n\n** False colour composite ** -> image bands displayed in red, green and blue do not match the spectra of these three primary colours\n\n** Pseudo colour display ** -> displays a monochrome image as a colour image by assigning each grey level to a unique colour. This benefits visualisation as our eyes perceive more colours than grey levels however the original quantitative sequential relationships of the DNs are lost. "
+      "source": "# Remote Sensing\n\nthis notebook covers:\n- Image display\n- Point operations\n  - Contrast enhancement\n  - BCET\n- Golden rules\n\n## Image display\n\nA digital image is a 2D array of numbers in lines and columns or a raster dataset. It can also have a third dimension, in the form of other layers. Each cell of a digital image is called a pixel and the number representing the brightness of the pixel is called a **digital number (DN).** It can be composed of any number of layers/bands.\n<img src=\"Data_Image_Operations/Image_Layers.png\" style=\"width:400px;\"/>\n\nNot all bands are within the visible spectrum, however we can visualise them by assigning them to a colour gun in the visible spectrum. Following **tristimulus colour theory**, human colour perception is performed by three types of cones matching three primary colour: **R**ed, **G**reen and **B**lue (RGB). the combination of these three colours:\n$$ C=rR+gG+bB $$\nAllows any colour to be represented to us within the visible spectrum.\n\nIntroducing some common terminoloy:\n\n** True colour composite ** -> display of 3 image bands in red, green and blue spectral ranges matching RGB. \n\n** False colour composite ** -> image bands displayed in red, green and blue do not match the spectra of these three primary colours\n\n** Pseudo colour display ** -> displays a monochrome image as a colour image by assigning each grey level to a unique colour. This benefits visualisation as our eyes perceive more colours than grey levels however the original quantitative sequential relationships of the DNs are lost. "
     },
     {
       "metadata": {
@@ -13,14 +13,8 @@
       },
       "cell_type": "code",
       "source": "# Import required packages\n!pip install --upgrade pip\n!pip install opencv-python",
-      "execution_count": 135,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": "Requirement already up-to-date: pip in /home/nbuser/anaconda3_501/lib/python3.6/site-packages (20.1.1)\nRequirement already satisfied: opencv-python in /home/nbuser/anaconda3_501/lib/python3.6/site-packages (4.2.0.34)\nRequirement already satisfied: numpy>=1.11.3 in /home/nbuser/anaconda3_501/lib/python3.6/site-packages (from opencv-python) (1.16.2)\n",
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {
@@ -36,8 +30,8 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "#read in image\nimg = imageio.imread('Data_Image_Operations/Picture1.png')\n\n#find out image ratio\nprint('Image dimension =', img.shape) \n\n#separate layers\nimage0 = np.uint8(img[:,:,0])\nimage1 = np.uint8(img[:,:,1])\nimage2 = np.uint8(img[:,:,2]) \n\n#plot grey scale\nfig = plt.figure()\nfig.add_subplot(231), plt.title('grey scale')\nplt.imshow(image0, cmap = 'gray'), plt.gcf().set_size_inches(8, 11)\n\n#plot pseudo colour display\nfig.add_subplot(232), plt.title('pseudo-colour')\nplt.imshow(image0, cmap = 'gist_rainbow'), plt.gcf().set_size_inches(8, 11)\n\n#generate colourbar to highlight brightest DNs\nthreshold = 0.8 \ncolors = [(0, \"white\"), (threshold*float(np.max(image0))/float(np.max(image0)), \"gray\"),\n          (threshold*float(np.max(image0))/float(np.max(image0)), \"red\"), (1, \"red\") ]\nmycmap = mcolors.LinearSegmentedColormap.from_list('my_colormap', colors)\n\n#generate plot using new colourbar\nfig.add_subplot(233), plt.title('pseudo-colour'),\nplt.imshow(image0,cmap=mycmap), plt.gcf().set_size_inches(8, 11)",
-      "execution_count": 98,
+      "source": "#read in image\nimg = imageio.imread('Data_Image_Operations/Picture1.png')\n\n#find out image ratio\nprint('Image dimension =', img.shape) \n\n#separate layers\nimage0 = np.uint8(img[:,:,0])\nimage1 = np.uint8(img[:,:,1])\nimage2 = np.uint8(img[:,:,2]) \n\n#plot grey scale\nfig = plt.figure()\nfig.add_subplot(231), plt.title('grey scale')\nplt.imshow(image0, cmap = 'gray'), plt.gcf().set_size_inches(8, 11)\n\n#plot pseudo colour display\nfig.add_subplot(232), plt.title('pseudo-colour')\nplt.imshow(image0, cmap = 'gist_rainbow'),\nplt.gcf().set_size_inches(8, 11)\n\n#generate colourbar to highlight brightest DNs\nthreshold = 0.8 \ncolors = [(0, \"white\"),\n    (threshold*float(np.max(image0))/float(np.max(image0)), \"gray\"),\n    (threshold*float(np.max(image0))/float(np.max(image0)), \"red\"), \n          (1, \"red\") ]\nmycmap = mcolors.LinearSegmentedColormap.from_list('my_colormap', \n                                                   colors)\n\n#generate plot using new colourbar\nfig.add_subplot(233), plt.title('pseudo-colour'),\nplt.imshow(image0,cmap=mycmap), plt.gcf().set_size_inches(8, 11)",
+      "execution_count": 340,
       "outputs": [
         {
           "output_type": "stream",
@@ -46,9 +40,9 @@
         },
         {
           "output_type": "execute_result",
-          "execution_count": 98,
+          "execution_count": 340,
           "data": {
-            "text/plain": "(<matplotlib.image.AxesImage at 0x7f99cbf649e8>, None)"
+            "text/plain": "(<matplotlib.image.AxesImage at 0x7f99c6edeef0>, None)"
           },
           "metadata": {}
         },
@@ -67,15 +61,15 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## point operations\nA point operation is a modification of a pixel value which is based on that pixel value and is independent of location or neighboring values. If we let x represent a digital imge and $x_{i,j}$ is the Dn of any pixel and Y the output pixel of any image then we describe any point operations as:\n$$y_{i,j}=f(x_{i,j}) $$\nThis is also frequently called histogram modification as its only alters the histogram of an image but not spatial relationship of image pixels.  Since our result is irrespect of its spatial location we will always have the same output for a specific input, this allows a **LookUp Table (LUT)** to be used. All values are computed first for every present Dn level and the the inputs are simply matched to their corresponding output. This saves computational time by not repeating the same operation. "
+      "source": "## Point operations\nA point operation is a modification of a pixel value which is based on that pixel value and is independent of location or neighboring values. If we let x represent a digital imge and $x_{i,j}$ is the Dn of any pixel and Y the output pixel of any image then we describe any point operations as:\n$$y_{i,j}=f(x_{i,j}) $$\nThis is also frequently called histogram modification as its only alters the histogram of an image but not spatial relationship of image pixels.  Since our result is irrespect of its spatial location we will always have the same output for a specific input, this allows a **LookUp Table (LUT)** to be used. All values are computed first for every present Dn level and the the inputs are simply matched to their corresponding output. This saves computational time by not repeating the same operation. "
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "#Create histograms for all 3 bands\n\nhistogram0, bin_edges0 = np.histogram(image0, bins=100, range=(0, np.max(image0)))\nhistogram1, bin_edges1 = np.histogram(image1, bins=100, range=(0, np.max(image1)))\nhistogram2, bin_edges2 = np.histogram(image2, bins=100, range=(0, np.max(image2)))\n\n#create figure\nplt.figure()\nplt.title(\"bands histograms\")\nplt.xlabel(\"DN value\")\nplt.ylabel(\"pixels\")\n\n#plot histograms\nplt.plot(bin_edges0[0:-1], histogram0, 'r')\nplt.plot(bin_edges1[0:-1], histogram1, 'b')\nplt.plot(bin_edges2[0:-1], histogram2, 'g')\nplt.gcf().set_size_inches(7, 5)\nplt.show()",
-      "execution_count": 137,
+      "source": "#Create histograms for all 3 bands\n\nhistogram0, bin_edges0 = np.histogram(image0, bins=100, range=(0, \n                                                np.max(image0)))\nhistogram1, bin_edges1 = np.histogram(image1, bins=100, range=(0, \n                                                np.max(image1)))\nhistogram2, bin_edges2 = np.histogram(image2, bins=100, range=(0, \n                                                np.max(image2)))\n\n#create figure\nplt.figure()\nplt.title(\"bands histograms\")\nplt.xlabel(\"DN value\")\nplt.ylabel(\"pixels\")\n\n#plot histograms\nplt.plot(bin_edges0[0:-1], histogram0, 'r')\nplt.plot(bin_edges1[0:-1], histogram1, 'b')\nplt.plot(bin_edges2[0:-1], histogram2, 'g')\nplt.gcf().set_size_inches(7, 5)\nplt.show()",
+      "execution_count": 341,
       "outputs": [
         {
           "output_type": "display_data",
@@ -99,8 +93,8 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "#set cut-off limits\nimage1_clip = np.clip(image1, 20, 200)\n#can always clip top and bottom 1% of pixels in histogram as a standard range.\n\n#visualise change\nfig = plt.figure()\n\nfig.add_subplot(221), plt.title('original'), \nplt.hist(image1.ravel(),np.max(image0),[0,np.max(image0)]), plt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(222), plt.title('clipped')\nplt.hist(image1_clip.ravel(),np.max(image1_clip),[0,np.max(image1_clip)]), plt.gcf().set_size_inches(11, 8)\n\nplt.show()",
-      "execution_count": 138,
+      "source": "#set cut-off limits\nimage1_clip = np.clip(image1, 20, 200)\n#can always clip top and bottom 1% of pixels in histogram as a standard\n#range\n\n#visualise change\nfig = plt.figure()\n\nfig.add_subplot(221), plt.title('original'), \nplt.hist(image1.ravel(),np.max(image0),[0,np.max(image0)]),\nplt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(222), plt.title('clipped')\nplt.hist(image1_clip.ravel(),np.max(image1_clip),[0,np.max(image1_clip)]), \nplt.gcf().set_size_inches(11, 8)\n\nplt.show()",
+      "execution_count": 342,
       "outputs": [
         {
           "output_type": "display_data",
@@ -124,8 +118,8 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "#save time by by only computing values once\nMIN = np.min(image1_clip)\nMAX = np.max(image1_clip)\n\n#apply linear scale\nLCE = (image1_clip-MIN)*(255/(MAX-MIN))\n\n#Could be done using a lookup table, unhash \"##\" to use\n##LUT  = {}\n##for i in range(MIN,MAX+1): LUT[i] = (i-MIN)*(255/(MAX-MIN))   \n##LCE = np.array([LUT.get(i) for i in range(MIN, MAX + 1)])\n##LCE = indexer[(image1_clip - MIN)]\n\n\n#compare results\nfig = plt.figure()\n\nfig.add_subplot(221), plt.title('clipped'), plt.xlim(0,250)\nplt.hist(image1_clip.ravel(),np.max(image1_clip),[0,np.max(image1_clip)]), plt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(222), plt.title('Linear scale')\nplt.hist(LCE.ravel(),np.max(image1),[0,np.max(image1)]), plt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(224), plt.title('LCE'), plt.set_cmap('gray')\nplt.imshow(LCE), plt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(223), plt.title('original'), plt.set_cmap('gray')\nplt.imshow(image1), plt.gcf().set_size_inches(11, 8)\n\nplt.show()\n\nprint ('an increase in contrast can be seen')",
-      "execution_count": 335,
+      "source": "#save time by by only computing values once\nMIN = np.min(image1_clip)\nMAX = np.max(image1_clip)\n\n#apply linear scale\nLCE = (image1_clip-MIN)*(255/(MAX-MIN))\n\n#Could be done using a lookup table, unhash \"##\" to use\n##LUT  = {}\n##for i in range(MIN,MAX+1): LUT[i] = (i-MIN)*(255/(MAX-MIN))   \n##LCE = np.array([LUT.get(i) for i in range(MIN, MAX + 1)])\n##LCE = indexer[(image1_clip - MIN)]\n\n\n#compare results\nfig = plt.figure()\n\nfig.add_subplot(221), plt.title('clipped'), plt.xlim(0,250)\nplt.hist(image1_clip.ravel(),np.max(image1_clip),\n    [0,np.max(image1_clip)]), plt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(222), plt.title('Linear scale')\nplt.hist(LCE.ravel(),np.max(image1),[0,np.max(image1)]),\nplt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(224), plt.title('LCE'), plt.set_cmap('gray')\nplt.imshow(LCE), plt.gcf().set_size_inches(11, 8)\n\nfig.add_subplot(223), plt.title('original'), plt.set_cmap('gray')\nplt.imshow(image1), plt.gcf().set_size_inches(11, 8)\n\nplt.show()\n\nprint ('an increase in contrast can be seen')",
+      "execution_count": 343,
       "outputs": [
         {
           "output_type": "display_data",
@@ -180,7 +174,7 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## Balance contrast enhancement technique (BCET)"
+      "source": "### Balance Contrast Enhancement Technique (BCET)"
     },
     {
       "metadata": {},
@@ -230,8 +224,8 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "histogram_BCET0, bin_edges0 = np.histogram(image_BCET0, bins=100, range=(0, np.max(image0)))\nhistogram_BCET1, bin_edges1 = np.histogram(image_BCET1, bins=100, range=(0, np.max(image1)))\nhistogram_BCET2, bin_edges2 = np.histogram(image_BCET2, bins=100, range=(0, np.max(image2)))\n\nfig = plt.figure()\nfig.add_subplot(222), plt.title(\"bands histograms BCET\")\nplt.xlabel(\"DN value\"), plt.ylabel(\"pixels\")\n#plot histograms\nplt.plot(bin_edges0[0:-1], histogram_BCET0, 'r')\nplt.plot(bin_edges1[0:-1], histogram_BCET1, 'b')\nplt.plot(bin_edges2[0:-1], histogram_BCET2, 'g')\nplt.gcf().set_size_inches(16, 11)\n\nfig.add_subplot(221), plt.title(\"bands histograms original image\")\nplt.xlabel(\"DN value\"), plt.ylabel(\"pixels\")\n#plot histograms\nplt.plot(bin_edges0[0:-1], histogram0, 'r')\nplt.plot(bin_edges1[0:-1], histogram1, 'b')\nplt.plot(bin_edges2[0:-1], histogram2, 'g')\nplt.gcf().set_size_inches(16, 11)\nplt.show()",
-      "execution_count": 339,
+      "source": "histogram_BCET0, bin_edges0 = np.histogram(image_BCET0, bins=100, \n                                        range=(0, np.max(image0)))\nhistogram_BCET1, bin_edges1 = np.histogram(image_BCET1, bins=100, \n                                        range=(0, np.max(image1)))\nhistogram_BCET2, bin_edges2 = np.histogram(image_BCET2, bins=100, \n                                        range=(0, np.max(image2)))\n\nfig = plt.figure()\nfig.add_subplot(222), plt.title(\"bands histograms BCET\")\nplt.xlabel(\"DN value\"), plt.ylabel(\"pixels\")\n#plot histograms\nplt.plot(bin_edges0[0:-1], histogram_BCET0, 'r')\nplt.plot(bin_edges1[0:-1], histogram_BCET1, 'b')\nplt.plot(bin_edges2[0:-1], histogram_BCET2, 'g')\nplt.gcf().set_size_inches(16, 11)\n\nfig.add_subplot(221), plt.title(\"bands histograms original image\")\nplt.xlabel(\"DN value\"), plt.ylabel(\"pixels\")\n#plot histograms\nplt.plot(bin_edges0[0:-1], histogram0, 'r')\nplt.plot(bin_edges1[0:-1], histogram1, 'b')\nplt.plot(bin_edges2[0:-1], histogram2, 'g')\nplt.gcf().set_size_inches(16, 11)\nplt.show()",
+      "execution_count": 344,
       "outputs": [
         {
           "output_type": "display_data",
@@ -253,7 +247,16 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## golden rules for good contrast enhancement\n- after any complex image processing, you wil still need to apply contrast enhancement to view the results properly\n- visual observation is best to judge image quality\n- Before extracting spectral profiles the data should laways be BCET stretched beforehand\n"
+      "source": "### Golden rules for good contrast enhancement\n- after any complex image processing, you wil still need to apply contrast enhancement to view the results properly\n- visual observation is best to judge image quality\n- Before extracting spectral profiles the data should laways be BCET stretched beforehand\n"
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
