--- a/notebooks/coding/Pandas.ipynb
+++ b/notebooks/coding/Pandas.ipynb
@@ -5,6 +5,11 @@
    "metadata": {},
    "source": [
     "# Pandas\n",
+    "\n",
+    "```{index} Pandas\n",
+    "```\n",
+    "\n",
+    "\n",
     "[Pandas](https://pandas.pydata.org/docs/) is an open source library for Python that can be used for data manipulation and analysis. If your data can be put into a spreadsheet, Pandas is exactly what you need!\n",
     "\n",
     "Pandas is a very powerful tool with highly optimised performance. The full documentation can be found [here](https://pandas.pydata.org/docs/index.html).\n",
@@ -2094,7 +2099,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
